background images positoned and added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <li >ABOUT US</li>
         </ul>
     </div>
-    <div class="container-fluid header" style="background-image: url('images/pizza\ inn\ by\ \(\ 1080\ X\ 1080\ \).jpg');">
-        <h1>DYNAMO PIZZA PALACE</h1>
-        <P>Live, Feed, Smile</P>
-    </div>
+    <br>
+    <div class="header" style="background-image: url('images/bg( 750 X 750 ).jpg');">
+        <div class="container-fluid ">
+            <h1 id="h1">DYNAMO PIZZA PALACE</h1>
+            <p id="p1">Live, Feed, Smile</p>
+        </div>
 </body>
 </html>
