--- a/index.html
+++ b/index.html
@@ -17,9 +17,59 @@
     </div>
     <br>
     <div class="header" style="background-image: url('images/bg( 750 X 750 ).jpg');">
+        <div class="info">
+            <p>
+                Dynamo Pizza Palace.<br>
+                Ngong Road, Prestige Plaza. <br>
+                Opened Weekdays:Monday-Friday  From 8:00 to 21:00.<br>
+                Weekends: Saturday Till 3PM. <br>
+                All  are welcome.
+            </p>
+        </div>
         <div class="container-fluid ">
             <h1 id="h1">DYNAMO PIZZA PALACE</h1>
             <p id="p1">Live, Feed, Smile</p>
+            <h2>CHECKOUT OUR VALENTINES SPECIAL OFFER</h2>
         </div>
+    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="hawai">HAWAIIAN PIZZA</h3>
+                    <img src="images/hawaiian.jpeg" alt="HAWAIIAN" title="HAWAIIAN">
+                    <p>Price:1250/=</p>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="mush">CHICKEN & MUSHROOM</h3>
+                    <img src="images/mushroom.jpeg" alt="CHICKEN & MUSHROOMS" title="CHICKEN & MUSHROOMS">
+                    <p>Price:1300/=</p>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="chictikka">CHICKEN TIKKA PIZZA</h3>
+                    <img src="images/chicken.jpeg" alt="CHICKEN TIKKA" title="CHICKEN TIKKA">
+                    <p>Price:1100/=</p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="veg">VEGETERIAN TIKKA</h3>
+                    <img src="images/veg.jpeg" alt="VEGETERIAN TIKKA" title="VEGETERIAN TIKKA">
+                    <p>Price:1150/=</p>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="beef">BEEF PEPPERONI PIZZA</h3>
+                    <img src="images/pepperoni.jpeg" alt="BEEF PEPPERONI" title="BEEF PEPPERONI">
+                    <p>Price:1300/=</p>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h3 class="chictikka">ITALIAN PIZZA</h3>
+                    <img src="images/italian.jpeg" alt="ITALIAN" title="ITALIAN">
+                    <p>Price:1400/=</p>
+                </div>
+            </div>
+
+        </div>
+        
 </body>
 </html>
