--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="container-fluid menu">
         <ul class="menulist">
-            <li >HOME</li>
-            <li >MENU</li>
-            <li >ABOUT US</li>
+            <li><a href="index.html">HOME</a></li>
+            <li ><a href="menu.html">MENU</a></li>
+            <li ><a href="about.html">ABOUT US</a></li>
+            <li class="order"><a href="order.html">ORDER NOW</a></li>
         </ul>
     </div>
     <br>
@@ -70,6 +71,14 @@
             </div>
 
         </div>
-        
+    <div class="footer">
+        <footer>
+            Tel: +254717371936. <br>
+            Email:pizza@dynamopalace.com. <br>
+            Location: Ngong Road,Prestige Plaza,2nd Floor. <br>
+            All Rights Reserved. <br>
+            &copy;2020. <br>
+        </footer>
+    </div>    
 </body>
 </html>
