added about us page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="bootstrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>ABOUT US || DYNAMO PALACE</title>
 </head>
 <body>
-    
+    <div class="container-fluid menu">
+        <ul class="menulist">
+            <li><a href="index.html">HOME</a></li>
+            <li ><a href="menu.html">MENU</a></li>
+            <li ><a href="about.html">ABOUT US</a></li>
+            <li class="order"><a href="order.html">ORDER NOW</a></li>
+        </ul>
+    </div>
+    <div class="container">
+        <div class="about">
+            <div class="safe">
+                <h3>Safe Seren Environment</h3>
+                <img src="images/prestige.jpeg" title="PRESTIGE PLAZA">
+                <p>If you are looking for a safe secure and noise free place to enjoy your meal
+                    look no further. We are located on Ngong Road Prestige Plaza on the second floor.
+                    We provide excelent client relationship with a well learned employees and world class
+                    chefs.We also offer <span>free wifi</span> and <span>friendly prices</span> to fit everyone.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
