--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
         <ul class="menulist">
             <li><a href="index.html">HOME</a></li>
             <li ><a href="menu.html">MENU</a></li>
-            <li ><a href="about.html.html">ABOUT US</a></li>
+            <li ><a href="about.html">ABOUT US</a></li>
             <li class="order"><a href="order.html">ORDER NOW</a></li>
         </ul>
     </div>
