added footer and contact details on the about me

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             <li class="order"><a href="order.html">ORDER NOW</a></li>
         </ul>
     </div>
+    <br>
     <div class="container">
         <div class="about">
             <div class="safe">
@@ -27,7 +28,33 @@
                     chefs.We also offer <span>free wifi</span> and <span>friendly prices</span> to fit everyone.
                 </p>
             </div>
+            <div class="safe">
+                <h3>Best Tasting Meals at Favourable Prices</h3>
+                <img src="images/restaurant.jpeg" title="DYNAMO PIZZA PAZA">
+                <p>The Twisty Bread, the signature Wingz and the delicious Double Meal are additional
+                     value-for-money options that keep our satisfied customers coming back time after time. 
+                     These are the meals that have made our Terri?c Tuesday everyone’s favourite day of the week.
+                      When entertaining, a Hawaiian, a Regina, or a Peri Peri Chicken pizza from Pizza Inn is the
+                       obvious and perfect option to please crowds of all ages.
+                </p>
+            </div>
+            <div class="schedule">
+                <h3>Our Schedule</h3>
+                <p>Weekdays: Monday-Friday 10:00AM-21:00PM</p>
+                <p>Weekends: Saturday-Sunday 09:00AM-10:30PM</p>
+                <p>Call us on:     +254717371936</p>
+                <p>Also Email us on: dmbugua66@gmail.com</p>
+            </div>
         </div>
     </div>
+    <div class="footer">
+        <footer>
+            Tel: +254717371936. <br>
+            Email:pizza@dynamopalace.com. <br>
+            Location: Ngong Road,Prestige Plaza,2nd Floor. <br>
+            All Rights Reserved. <br>
+            &copy;2020. <br>
+        </footer>
+    </div>    
 </body>
 </html>
