added the home delivery option in order file

--- a/menu.html
+++ b/menu.html
@@ -19,17 +19,28 @@
     <br>
     <div class="container">
         <div class="toppings">
+            <h3>Pizza Crust</h3>
+                <ul class="topList">
+                    <li>Suffed Crust</li>
+                    <li>Thin and Crispy</li>
+                    <li>Neopolitan Crust</li>
+                    <li>Gluteen Free </li> 
+                    <p>NOTE! The addition of a crust
+                        increases the price of pizza ordered
+                        by Sh. 50 respectively depending on the size.
+                    </p>
+                </ul>
             <h3>Pizza Toppings</h3>
-            <ul class="topList">
-                <li>Suffed Crust</li>
-                <li>Thin and Crispy</li>
-                <li>Neopolitan Crust</li>
-                <li>Gluteen Free </li> 
-                <p>NOTE! The addition of a toppings
+                <ul class="crust">
+                    <li>Mushrooms</li>
+                    <li>Bacon</li>
+                    <li>Sausage</li>
+                    <li>Cheese</li>
+                </ul>
+                <p class="p2">NOTE! The addition of a toppings
                     increases the price of pizza ordered
                     by Sh. 50 respectively depending on the size.
-                </p>
-            </ul>
+                </p>    
         </div>
         <div class="row menu-file">
             <div class="col-md-6 col-sm-6">
