--- a/order.html
+++ b/order.html
@@ -26,12 +26,12 @@
                 <div class="col-md-4">
                     <form action="">
                         <select name="pizza" class="pizzaType" style="width: 300px;">
-                            <option  value=1300 class="chickenMushroom" onclick="chickenMushroom()">Chicken Mushroom Pizza - Ksh.1300</option>
-                            <option value=1250 onclick='hawaiian()'>Hawaiian Pizza - Ksh.1250</option>
-                            <option value=1100>Chicken Tikka Pizza - Ksh.1100</option>
-                            <option value=1150>Vegeterian Tikka Pizza - Ksh.1150</option>
-                            <option value=1300>Beef Pepperoni Pizza - Ksh.1300</option>
-                            <option value=1400>Italian Pizza - Ksh.1400</option>
+                            <option  value="1300">Chicken Mushroom Pizza - Ksh.1300</option>
+                            <option value="1250">Hawaiian Pizza - Ksh.1250</option>
+                            <option value="1100">Chicken Tikka Pizza - Ksh.1100</option>
+                            <option value="1150">Vegeterian Tikka Pizza - Ksh.1150</option>
+                            <option value="1300">Beef Pepperoni Pizza - Ksh.1300</option>
+                            <option value="1400">Italian Pizza - Ksh.1400</option>
                         </select>
                     </form>
                 </div>
@@ -93,6 +93,9 @@
                 <div class="col-md-4">
                     <input type="text" class="crustPrice" placeholder="Amount...">
                 </div>
+            </div>
+            <div class="orderbtn">
+                <button type="submit" class="confirmOrder">CONFIRM ORDER</button>
             </div>
         </div>
         <div class="totalOrder">
