now we can select an order and count the total

--- a/order.html
+++ b/order.html
@@ -35,8 +35,8 @@
                         </select>
                     </form>
                 </div>
-                <div class="col-md-4">
-                    <input type="text" class="pizzaPrice" placeholder="Amount...">
+                <div class="col-md-4 ">
+                    <input type="text"  placeholder="Amount..."></div>
                 </div>
             </div>
             <div class="row orderSpace">
@@ -98,26 +98,28 @@
                 <button type="submit" class="confirmOrder">CONFIRM ORDER</button>
             </div>
         </div>
-        <div class="totalOrder">
-            <h4>Your Total Order</h4>
-            <div class="yourOrder"></div>
-            <div class="total">Total Amount</div>
-        </div>
-        <div class="delivery">
-            <p>We also do <span>home delivery</span> within Nairobi at Ksh.200. <button>HOME DELIVERY</button></p>
-        </div>
-        <div class="contactForm">
-                <form action="" class="contactDetails">
-                    <label for="name">Your Name:  </label>
-                    <input type="text" value="" class="userName" placeholder="Name.."><br>
-                    <label for="number">Phone Number:</label>
-                    <input type="text" value="" class="userNumber" placeholder="Number.."><br>
-                    <label for="location">Delivery Location</label>
-                    <input type="text" value="" class="userLocation" placeholder="Location.."><br>
-                </form>
-        </div>
-        <div class="submit">
-            <input type="submit" name="" id="submit">
+        <div class="container">
+            <div class="totalOrder">
+                <h4>Your Total Order</h4>
+                <div class="yourOrder"></div>
+                <label class="total">Total Amount</label>
+            </div>
+            <div class="delivery">
+                <p>We also do <span>home delivery</span> within Nairobi at Ksh.200. <button>HOME DELIVERY</button></p>
+            </div>
+            <div class="contactForm">
+                    <form action="" class="contactDetails">
+                        <label for="name">Your Name:  </label>
+                        <input type="text" value="" class="userName" placeholder="Name.."><br>
+                        <label for="number">Phone Number:</label>
+                        <input type="text" value="" class="userNumber" placeholder="Number.."><br>
+                        <label for="location">Delivery Location</label>
+                        <input type="text" value="" class="userLocation" placeholder="Location.."><br>
+                    </form>
+            </div>
+            <div class="submit">
+                <input type="submit" name="" id="submit">
+            </div>
         </div>
     </div>
     <div class="container-fluid">
