designed the total order and confirm order

--- a/order.html
+++ b/order.html
@@ -102,7 +102,7 @@
             <div class="totalOrder">
                 <h4>Your Total Order</h4>
                 <div class="yourOrder"></div>
-                <label class="total">Total Amount</label>
+                <label class="totalAmount" >Total Amount: <span class="total bg-warning" ></span></label>
             </div>
             <div class="delivery">
                 <p>We also do <span>home delivery</span> within Nairobi at Ksh.200. <button>HOME DELIVERY</button></p>
