--- a/order.html
+++ b/order.html
@@ -129,7 +129,7 @@
                 <label class="totalAmount" >Total Amount: <span class="total bg-warning" ></span></label>
             </div>
             <div class="delivery">
-                <p>We also do <span>home delivery</span> within Nairobi at Ksh.200. <button>HOME DELIVERY</button></p>
+                <p style="font-weight: bold; font-size: 1em;">We also do <span>home delivery</span> within Nairobi at Ksh.200. <button class="homeDelivery bg-danger rounded-lg">HOME DELIVERY</button><button class="confirmHomeDelivery bg-success rounded-lg">CONFIRM HOME DELIVERY</button></p>
             </div>
             <div class="contactForm">
                     <form action="" class="contactDetails">
