after home delivery is confirmed and true the charges will be added to total charges

--- a/order.html
+++ b/order.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="orderbtn">
-                <button type="submit" class="confirmOrder">CONFIRM ORDER</button>
+                <button type="submit" class="confirmOrder">CONFIRM ORDER</button> <button class="addPizza"> ADD ANOTHER PIZZA</button>
             </div>
         </div>
         <div class="container">
